Move css & js to subfolders

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<title>Pet Farming</title>
 	
 	<!-- Bootstrap Core CSS -->
-	<link href="files/bootstrap.css" rel="stylesheet">
-	<link href="files/bootstrap-select.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="files/jquery.css">
+	<link href="files/css/bootstrap.css" rel="stylesheet">
+	<link href="files/css/bootstrap-select.css" rel="stylesheet">
+	<link href="files/css/jquery.css"rel="stylesheet" type="text/css" >
 	
 	<!-- Custom CSS -->
-	<link href="files/ef.css" rel="stylesheet">
+	<link href="files/css/ef.css" rel="stylesheet">
 	
 	<style>
 	body {
@@ -22,12 +22,12 @@
 	/* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 	}
 	</style>
-	<script src="files/jquery_002.js"></script>
-	<script src="files/bootstrap.js"></script>
-	<script src="files/bootstrap-select.js"></script>
-	<script src="files/jquery.js"></script>
-	<script src="files/jquery-sortable.js"></script>
-	<script src="files/petfarming.js"></script>
+	<script src="files/js/jquery_002.js"></script>
+	<script src="files/js/bootstrap.js"></script>
+	<script src="files/js/bootstrap-select.js"></script>
+	<script src="files/js/jquery.js"></script>
+	<script src="files/js/jquery-sortable.js"></script>
+	<script src="files/js/petfarming.js"></script>
 	<script>
  
 	</script>
@@ -855,7 +855,7 @@
 				</div>
 				<div class="shrow" style="margin-top:2px">
 					<span style="display:inline-block; width:36px;">
-						<img style="margin-right:2px; float:right" class="icon-10" src="files/gem.png">
+						<img style="margin-right:2px; float:right" class="icon-10" src="files/img/gem.png">
 					</span>
 					<span style="display:inline-block; width:36px; text-align:left; margin-left:2px margin-top:-2px" id="shgemcost">700</span>
 				</div>				
