Add reset button to tier list

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
 </head>
 <body>
 	<div class="container">	
-		<div id="tierlist"><span style="font-size:12px; font-weight:bold; text-decoration:underline">Tier List</span><br/>(Drag to reorder,<br />uncheck to disable)<ol class="vertical"></ol></div>
+		<div id="tierlist">
+			<span style="font-size:12px; font-weight:bold; text-decoration:underline">Tier List</span><br/>
+			(Drag to reorder,<br />
+			uncheck to disable)
+			<ol class="vertical"></ol><br />
+			<button onclick='resetTierList()' style='margin-left:10px; margin-bottom:5px'>Reset</button>
+		</div>
 		<div class="row unit-details">
 			<div class="shpage">
 				<div class="shrow">
