Test script to make tier list sorting work on mobile

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<script src="files/js/bootstrap.js"></script>
 	<script src="files/js/bootstrap-select.js"></script>
 	<script src="files/js/jquery.js"></script>
+	<script src="files/js/jquery-ui.js"></script>
+	<script src="files/js/touchpunch.js"></script>
 	<script src="files/js/jquery-sortable.js"></script>
 
 	<script src="files/js/petfarming.js"></script>
